--- a/sites/all/modules/custom/matrix/css/matrix_compare_page.css
+++ b/sites/all/modules/custom/matrix/css/matrix_compare_page.css
@@ -81,3 +81,8 @@ input[type=number]::-webkit-outer-spin-button {
     cursor: pointer;
     float: left;
 }
+
+.cart-row {
+    border: 1px solid #ccc;
+    padding: 10px;
+}
